--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+/_build
+/deps
+
 # Windows image file caches
 Thumbs.db
 ehthumbs.db
@@ -45,3 +48,4 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+
